<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/starting_layout"
    android:orientation="vertical"
    tools:context=".StartingActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/recent"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="100dp"
        app:cardCornerRadius="6dp"
        android:padding="15dp"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:padding="10dp"
                app:srcCompat="@drawable/download" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/download_recent_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_to_see_latest_updates"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/saved"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="100dp"
        app:cardCornerRadius="6dp"
        android:padding="15dp"
        android:layout_below="@+id/recent"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:padding="10dp"
                app:srcCompat="@drawable/see_2" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:layout_gravity="start"
                android:padding="10dp"
                android:orientation="vertical"
                android:textAlignment="textStart">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_downloaded_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:gravity="bottom"-->
<!--        ads:adSize="SMART_BANNER"-->
<!--        ads:adUnitId="@string/banner" />-->

    <TextView
        android:id="@+id/enterphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="284dp"
        android:text="@string/unsaved_label" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="147dp"
        android:ems="10"
        android:hint="+440710000000"
        android:inputType="textPhonetic" />


    <Button
        android:id="@+id/massage_button"
        android:layout_width="66dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="82dp"
        android:background="@color/colorAccent"
        android:text="@string/massage_button"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>