<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".SavedImageViewActivity">

        <ImageView
            android:id="@+id/image_view_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/repostlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/sharelayout"
            app:layout_constraintLeft_toLeftOf="@+id/sharelayout"
            app:layout_constraintRight_toRightOf="@+id/activity_main">

                <TextView
                    android:id="@+id/fab_text_repost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dip"
                    android:text="@string/repost"
                    android:textColor="@android:color/white"
                    android:typeface="normal" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_repost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:tint="@android:color/white"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/repost" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sharelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/downloadlayout"
            app:layout_constraintRight_toRightOf="@+id/activity_main">

                <TextView
                    android:id="@+id/fab_text_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dip"
                    android:text="@string/share"
                    android:textColor="@android:color/white"
                    android:typeface="normal" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:tint="@android:color/white"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_share_black_24dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/downloadlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/basefab"
            app:layout_constraintRight_toRightOf="@+id/activity_main">

                <TextView
                    android:id="@+id/fab_text_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorAccent"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif"
                    android:padding="5dip"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:typeface="normal" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:tint="@android:color/white"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/fab_delete" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basefab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:tint="@android:color/white"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main"
            app:layout_constraintRight_toRightOf="@+id/activity_main"
            app:srcCompat="@drawable/add" />

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="@id/activity_main"
            android:orientation="vertical"
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>